--- a/libdaisy/Makefile
+++ b/libdaisy/Makefile
@@ -18,32 +18,16 @@ dsy_dac \
 dsy_switch \
 system_stm32h7xx \
 
-######################################
-# building variables
-######################################
-#DEBUG = 0
 OPT = -O3
 
-#######################################
-# paths
-#######################################
-# source path
 SOURCES_DIR =  \
 Drivers/CMSIS \
 Drivers/STM32H7xx_HAL_Driver \
-#Middlewares/FatFs \
 
-# Build path
 BUILD_DIR = build
 
-######################################
-# source
-######################################
-
-# C sources
 C_SOURCES += $(addsuffix .c, $(MODULES))
 
-# manually adding necessary HAL files
 C_SOURCES += \
 Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd.c \
 Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd_ex.c \
@@ -86,56 +70,31 @@ Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr.c \
 Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr_ex.c \
 Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal.c \
 
-
 STARTUP_PATH = Drivers/CMSIS/Device/ST/STM32H7xx/Source/Templates/gcc
-# ASM sources
+
 ASM_SOURCES =  \
 $(STARTUP_PATH)/startup_stm32h750xx.s
 
-#######################################
-# binaries
-#######################################
 PREFIX = arm-none-eabi-
-# The gcc compiler bin path can be either defined in make command via GCC_PATH variable (> make GCC_PATH=xxx)
-# either it can be added to the PATH environment variable.
-ifdef GCC_PATH
-CC = $(GCC_PATH)/$(PREFIX)gcc
-AS = $(GCC_PATH)/$(PREFIX)gcc -x assembler-with-cpp
-CP = $(GCC_PATH)/$(PREFIX)objcopy
-SZ = $(GCC_PATH)/$(PREFIX)size
-AR = $(GCC_PATH)/$(PREFIX)ar
-GDB = $(GCC_PATH)/$(PREFIX)gdb
-else
+
 CC = $(PREFIX)gcc
 AS = $(PREFIX)gcc -x assembler-with-cpp
 CP = $(PREFIX)objcopy
 SZ = $(PREFIX)size
 AR = $(PREFIX)ar
 GDB = $(PREFIX)gdb
-endif
+
 HEX = $(CP) -O ihex
 BIN = $(CP) -O binary -S
 
-#######################################
-# CFLAGS
-#######################################
-# cpu
 CPU = -mcpu=cortex-m7
 
-# fpu
 FPU = -mfpu=fpv5-d16
 
-# float-abi
 FLOAT-ABI = -mfloat-abi=hard
 
-# mcu
 MCU = $(CPU) -mthumb $(FPU) $(FLOAT-ABI)
 
-# macros for gcc
-# AS defines
-AS_DEFS = 
-
-# C defines
 C_DEFS =  \
 -DUSE_HAL_DRIVER \
 -DSTM32H750xx \
@@ -148,8 +107,7 @@ C_INCLUDES = \
 -IDrivers/STM32H7xx_HAL_Driver/Inc \
 -I. \
 
-# compile gcc flags
-ASFLAGS = $(MCU) $(AS_DEFS) $(AS_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections
+ASFLAGS = $(MCU) $(OPT) -Wall -fdata-sections -ffunction-sections
 
 CFLAGS = $(MCU) $(C_DEFS) $(C_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections
 
@@ -157,40 +115,21 @@ ifeq ($(DEBUG), 1)
 CFLAGS += -g -gdwarf-2
 endif
 
-# Generate dependency information
-CFLAGS += -MMD -MP -MF"$(@:%.o=%.d)" -MT"$(@:%.o=%.d)"
-
-#######################################
-# LDFLAGS
-#######################################
-# link script
 LDSCRIPT = STM32H750IB_FLASH.lds
 
-# libraries
-LIBS = lc -lm -lnosys 
-LIBDIR = 
+LIBS = lc -lm -lnosys
+LIBDIR =
 LDFLAGS = $(MCU) -specs=nano.specs -T$(LDSCRIPT) $(LIBDIR) $(LIBS) -Wl,-Map=$(BUILD_DIR)/$(TARGET).map,--cref -Wl,--gc-sections
 
-# default action: build all
-all: $(BUILD_DIR)/$(TARGET).a 
+all: $(BUILD_DIR)/$(TARGET).a
 
-#######################################
-# build the application
-#######################################
-
-# list of objects
 OBJECTS = $(addprefix $(BUILD_DIR)/,$(notdir $(C_SOURCES:.c=.o)))
 vpath %.c $(sort $(dir $(C_SOURCES)))
-# list of ASM program objects
 OBJECTS += $(addprefix $(BUILD_DIR)/,$(notdir $(ASM_SOURCES:.s=.o)))
 vpath %.s $(sort $(dir $(ASM_SOURCES)))
 
-#$(BUILD_DIR)/%.o: %.c Makefile | $(BUILD_DIR) 
-#	$(CC) -c $(CFLAGS)  -Wa,-a,-ad,-alms=$(BUILD_DIR)/$(notdir $(<:.c=.lst)) $< -o $@
-
 $(BUILD_DIR)/%.o: %.c Makefile | $(BUILD_DIR)
 	$(CC) -c $(CFLAGS) -static -Wa,-a,-ad,-alms=$(BUILD_DIR)/$(notdir $(<:.c=.lst)) $< -o $@
-	#$(CC) -Wall $(CFLAGS) -static $< -o $@
 
 
 $(BUILD_DIR)/%.o: %.s Makefile | $(BUILD_DIR)
@@ -200,15 +139,7 @@ $(BUILD_DIR)/$(TARGET).a: $(OBJECTS) Makefile
 	$(AR) rcs $@ $(OBJECTS)
 
 $(BUILD_DIR):
-	mkdir $@        
+	mkdir $@
 
-#######################################
-# clean up
-#######################################
 clean:
-	-rm -fR $(BUILD_DIR)
-#######################################
-
-# dependencies
-#######################################
--include $(wildcard $(BUILD_DIR)/*.d)
+	$(RM) -R $(BUILD_DIR)
